# code_idealab_ros

./: .gitignore  .gitmodules
camera_node/: camera_listener.py  centroid_tracking_publisher.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/: .rosinstall  local_setup.sh  setup.sh
jr3/: manifest.xml
jr3/include/: jr3pci-ioctl.h
jr3/msg/: jr3_force.msg  loadcell.msg
jr3/src/: jr3node.cpp  read_jr3.c
korg/: manifest.xml
korg/install files/: pyalsa-1.0.25.tar.bz2
korg/nodes/: korg1_node.py
mark10/msg/: force.msg
old/jr3/: CMakeLists.txt
old/labjack/: labjack.py  labjack_patch.py
old/mark10/: mainpage.dox  manifest.xml
old/uvc_camera_mod/: README  example.yaml
src/: 99-uvc-c930.rules  99-uvc-vboxcam.rules  mark10.py  plotter.py
src/ati_nano/: CMakeLists.txt  package.xml
src/ati_sensor/: CMakeLists.txt  package.xml  readme.md
src/ati_sensor/launch/: ati_sensor.launch
src/ati_sensor/msg/: force_torque.msg
src/ati_sensor/scripts/: ati_sensor_node.py  read_ati_class.py
src/ati_sensor/scripts/archieve/: ati_node.py
src/camera_node/: centroid_tracking.py  centroid_tracking_publisher.py  readme.txt
src/falcon/: CMakeLists.txt  package.xml
src/force_plate/: CMakeLists.txt  package.xml
src/grf_exp/: CMakeLists.txt  package.xml
src/mark10/: CMakeLists.txt  __init__.py  package.xml
src/ni_daq/: CMakeLists.txt  package.xml  readme.md
src/universal_robots_lite/: CMakeLists.txt  package.xml  readme.md
src/universal_robots_lite/launch/: ur5_control.launch
src/universal_robots_lite/scripts/: ur_robot_lite_controller.py
src/universal_robots_lite/scripts/old/: talker_ur5e.py  talker_ur5e_old.py  test_ur_lite.py  ur5_controller.py  ur5_controller_urx.py
tutorial/: grf_package_quick_start.md  my_ros_note.md
(+337 files in other folders)
